<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">unit.</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="name">unit.</string>
    <string name="team_name">Team</string>
    <string name="bump_button">Bump</string>
    <string name="click_button">Click</string>
    <string name="player_score">NaN</string>
    <string name="achievement">Achievements</string>
    <string name="upgrade">Upgrades</string>
    <string name="submit">Submit</string>

</resources>
